style.css
*,
*::before,
*::after {
    padding: 0px;
    margin: 0px;
    box-sizing: border-box;
}

body {
    font-size: 20px;
    background-color: #fafafa;
    color: #333;
}
header,
main {
    max-width: 800px;
    margin-right: auto;
    margin-left: auto;
}
header {
    font-size: 30px;
    margin-top: 30px;
    color: #f47;
}
ul {
    margin-left: 30px;
}
li::marker {
    color: #f47;
}
a {
    text-decoration: none;
    color: #333;
}

